--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,38 @@
+* {
+    box-sizing: border-box;
+}
+
+:root {
+    --color-dark-cyan: hsl(185, 75%, 39%);
+    --color-very-dark-desaturated-blue: hsl(229, 23%, 23%);
+    --color-dark-grayish-blue: hsl(227, 10%, 46%);
+    --color-dark-gray: hsl(0, 0%, 59%);
+}
+
 body {
     font-family:'Kumbh Sans', sans-serif;
+}
+
+.name,
+.stat h2,
+.age {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.age,
+h3,
+p {
+    color: var(--color-dark-grayish-blue);
+    font-weight: 400;
+}
+
+h3 {
+    font-size: 14px;
+}
+
+p {
+    font-size: 12px;
 }
 
 .attribution {
