--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,15 @@ p {
     font-size: 12px;
 }
 
+img {
+    border: solid 5px white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
