--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,79 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-    --color-dark-cyan: hsl(185, 75%, 39%);
-    --color-very-dark-desaturated-blue: hsl(229, 23%, 23%);
-    --color-dark-grayish-blue: hsl(227, 10%, 46%);
-    --color-dark-gray: hsl(0, 0%, 59%);
+  --color-dark-cyan: hsl(185, 75%, 39%);
+  --color-very-dark-desaturated-blue: hsl(229, 23%, 23%);
+  --color-dark-grayish-blue: hsl(227, 10%, 46%);
+  --color-dark-gray: hsl(0, 0%, 59%);
 }
 
 body {
-    font-family:'Kumbh Sans', sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
 .name,
 .stat h2,
 .age {
-    font-size: 18px;
-    font-weight: 700;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .age,
 h3,
 p {
-    color: var(--color-dark-grayish-blue);
-    font-weight: 400;
+  color: var(--color-dark-grayish-blue);
+  font-weight: 400;
 }
 
 h3 {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 p {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 img {
-    border: solid 5px white;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+  border: solid 5px white;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+  border: solid 5px;
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.statistics {
+  display: flex;
+  justify-content: space-around;
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
