--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@ p {
 }
 
 img {
+  display: block;
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
   border: solid 5px white;
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -44,11 +53,17 @@ img {
   -o-border-radius: 50%;
 }
 
+.head {
+  width: 100%;
+  height: 150px;
+  background-color: aquamarine;
+}
+
 .card {
-  width: 300px;
+  width: 330px;
   height: 400px;
   border: solid 5px;
-  position: absolute;
+  position: relative;
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
