--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,12 @@
 
 body {
   font-family: "Kumbh Sans", sans-serif;
+  background-color: var(--color-dark-cyan);
+  background-image: url(../images/bg-pattern-top.svg),
+    url(../images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: calc(50vw - 978px) calc(50vh - 978px), 50vw 50vh;
 }
-
 /* Start text */
 .name,
 .stat h2,
@@ -40,7 +44,7 @@ p {
 img {
   display: block;
   position: absolute;
-  top: 150px;
+  top: 140px;
   left: 50%;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
@@ -57,42 +61,52 @@ img {
 
 .head {
   width: 100%;
-  height: 150px;
+  height: 140px;
   background-color: aquamarine;
+  background-image: url(../images/bg-pattern-card.svg);
+  border-top-left-radius: 20px;
+  -webkit-border--top-left-radius: 20px;
+  -moz-border--top-left-radius: 20px;
+  -ms-border--top-left-radius: 20px;
+  -o-border--top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  -webkit-border--top-right-radius: 20px;
+  -moz-border--top-right-radius: 20px;
+  -ms-border--top-right-radius: 20px;
+  -o-border--top-right-radius: 20px;
 }
 /* End header */
 /* Start personal information */
 .personal-info {
-    width: 50%;
-    margin: auto;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding-top: 70px;
+  width: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-top: 70px;
 }
 .name,
 .age {
-    margin: 0;
+  margin: 0;
 }
 /* End personal information */
 /* Start statistics */
 .statistics {
-    display: flex;
-    justify-content: space-around;
-  }
+  display: flex;
+  justify-content: space-around;
+}
 .stat {
-    text-align: center;
+  text-align: center;
 }
 .stat p {
-    margin-top: -10px;
+  margin-top: -10px;
 }
 /* End statistics */
 /* Start card */
 .card {
   width: 330px;
   height: 400px;
-  border: solid 5px;
-  position: relative;
+  position: absolute;
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
@@ -105,6 +119,7 @@ img {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  background-color: white;
 }
 /* End card */
 
